==> lijinshang/GM_BalanceCar/Core/Src/STM32_TLE5012B.c <==
#include "STM32_TLE5012B.h"

void triggerUpdate(TLE5012B_Sensor *sensor)
{
	HAL_GPIO_WritePin(sensor->sck_gpio_port, sensor->sck_pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(sensor->mosi_gpio_port, sensor->mosi_pin, GPIO_PIN_SET);
	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_SET);
}

void resetSafety(TLE5012B_Sensor *sensor)
{
	uint16_t u16RegValue = 0;

	triggerUpdate(sensor);

	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_RESET);

	u16RegValue = READ_STA_CMD;
	HAL_SPI_Transmit(sensor->spi, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);
	u16RegValue = DUMMY;
	HAL_SPI_Transmit(sensor->spi, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);
	HAL_SPI_Transmit(sensor->spi, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);

	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_SET);
}

errorTypes checkSafety(TLE5012B_Sensor *sensor, uint16_t safety, uint16_t command, uint16_t *readreg, uint16_t length)
{
	errorTypes errorCheck;

	if (!((safety) & SYSTEM_ERROR_MASK))
	{
		errorCheck = SYSTEM_ERROR;
	}
	else if (!((safety) & INTERFACE_ERROR_MASK))
	{
		errorCheck = INTERFACE_ACCESS_ERROR;
	}
	else if (!((safety) & INV_ANGLE_ERROR_MASK))
	{
		errorCheck = INVALID_ANGLE_ERROR;
	}
	else
	{
		uint16_t lengthOfTemp = length * 2 + 2;
		uint8_t temp[CRC_NUM_REGISTERS*2+2];

		temp[0] = _getFirstByte(command);
		temp[1] = _getSecondByte(command);

		for (uint16_t i = 0; i < length; i++)
		{
			temp[2 + 2 * i] = _getFirstByte(readreg[i]);
			temp[2 + 2 * i + 1] = _getSecondByte(readreg[i]);
		}

		uint8_t crcReceivedFinal = _getSecondByte(safety);

		uint8_t crc = _crcCalc(temp, lengthOfTemp);

		if (crc == crcReceivedFinal)
		{
			errorCheck = NO_ERROR;
		}
		else
		{
			errorCheck = CRC_ERROR;
			resetSafety(sensor);
		}
	}

	return errorCheck;
}

errorTypes readFromSensor(TLE5012B_Sensor *sensor, uint16_t command, uint16_t *data)
{
	uint16_t safety = 0;
	uint16_t readreg;
	uint16_t u16RegValue = 0;

	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_RESET);

	u16RegValue = command;

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
	TLE5012_SET_MOSI_MODE_AF_PP();
#endif

	HAL_SPI_Transmit(sensor->spi, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFF);

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
	TLE5012_SET_MOSI_MODE_INPUT();
#endif

	HAL_SPI_Receive(sensor->spi, (uint8_t *)(&readreg), 1, 0xFF);
	HAL_SPI_Receive(sensor->spi, (uint8_t *)(&safety), 1, 0xFF);

	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_SET);

	errorTypes checkError = checkSafety(sensor, safety, command, &readreg, 1);

	if (checkError != NO_ERROR)
	{
		*data = 0;
		return checkError;
	}
	else
	{
		*data = readreg;
		return NO_ERROR;
	}
}

errorTypes readBlockCRC(TLE5012B_Sensor *sensor)
{
	uint16_t u16RegValue = 0;
	uint16_t safety = 0;

	HAL_GPIO_WritePin(sensor->cs_gpio_port, sensor->cs_pin, GPIO_PIN_RESET);

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
	TLE5012_SET_MOSI_MODE_AF_PP();
#endif

	u16RegValue = READ_BLOCK_CRC;
	HAL_SPI_Transmit(sensor->spi, (uint8_t *)(&u16RegValue), sizeof(u16RegValue) / sizeof(uint16_t), 0xFFFF);

#ifndef TLE5012_NOT_MODIFY_MOSI_MANUALLY
	TLE5012_SET_MOSI_MODE_INPUT();
#endif

	HAL_SPI_Receive(sensor->spi, (uint8_t *)(sensor->registers), CRC_NUM_REGISTERS, 0xFF);
	HAL_SPI_Receive(sensor->spi, (uint8_t *)(&safety), 1, 0xFF);

	errorTypes checkError = checkSafety(sensor, safety, READ_BLOCK_CRC, sensor->registers, CRC_NUM_REGISTERS);

	return checkError;
}

errorTypes getNumRevolutions(TLE5012B_Sensor *sensor)
{
	uint16_t rawData = 0;
	errorTypes status = readFromSensor(sensor, READ_ANGLE_REV_CMD, &rawData);

	if (status != NO_ERROR)
	{
		return status;
	}

	rawData = (rawData & (DELETE_7BITS));

	if (rawData & CHECK_BIT_9)
	{
		rawData = rawData - CHANGE_UNIT_TO_INT_9;
	}

	sensor->NumRev = rawData;

	return NO_ERROR;
}

errorTypes getAngleSpeed(TLE5012B_Sensor *sensor)
{
	int16_t rawAngleSpeed = 0;
	uint16_t firMDVal = 0;
	uint16_t intMode2Prediction = 0;
	uint16_t angleRangeRaw = 0;

	errorTypes checkError = readAngleSpeed(sensor, &rawAngleSpeed);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readAngleValue(sensor, &angleRangeRaw);
	sensor->AngleRange = angleRangeRaw;

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readFromSensor(sensor, READ_INTMODE_1, &firMDVal);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	firMDVal >>= 14;

	checkError = readFromSensor(sensor, READ_INTMODE_2, &intMode2Prediction);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	if (intMode2Prediction & 0x0004)
	{
		intMode2Prediction = 3;
	}
	else
	{
		intMode2Prediction = 2;
	}

	sensor->AngleSpeed = _calculateAngleSpeed(sensor->AngleRange, rawAngleSpeed, firMDVal, intMode2Prediction);

	return NO_ERROR;
}

errorTypes getUpdAngleSpeed(TLE5012B_Sensor *sensor, float *angleSpeed)
{
	int16_t rawAngleSpeed = 0;
	uint16_t firMDVal = 0;
	uint16_t intMode2Prediction = 0;
	uint16_t angleRangeRaw = 0;

	errorTypes checkError = readUpdAngleSpeed(sensor, &rawAngleSpeed);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readAngleValue(sensor, &angleRangeRaw);
	sensor->AngleRange = (float)angleRangeRaw / POW_2_15 * ANGLE_360_VAL;

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readFromSensor(sensor, READ_INTMODE_1, &firMDVal);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readFromSensor(sensor, READ_INTMODE_2, &intMode2Prediction);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	if (intMode2Prediction & 0x0004)
	{
		intMode2Prediction = 3;
	}
	else
	{
		intMode2Prediction = 2;
	}

	*angleSpeed = _calculateAngleSpeed(sensor->AngleRange, rawAngleSpeed, firMDVal, intMode2Prediction);

	return NO_ERROR;
}
