==> Infineon/TLE5012-Magnetic-Angle-Sensor/src/Tle5012b.cpp <==
#include "Tle5012b.h"
#include "Arduino.h"

void Tle5012b::triggerUpdate()
{
	digitalWrite(_clock, LOW);
	digitalWrite(_masterout, HIGH);
	digitalWrite(_chipselect,LOW);
	delay(1);
	digitalWrite(_chipselect,HIGH);
}

errorTypes Tle5012b::checkSafety(uint16_t safety, uint16_t command, uint16_t* readreg, uint16_t length)
{
	errorTypes errorCheck ;

	if (!((safety) & SYSTEM_ERROR_MASK))
	{
		errorCheck = SYSTEM_ERROR;
		resetSafety();
	}

	else if (!((safety) & INTERFACE_ERROR_MASK))
	{
		errorCheck = INTERFACE_ACCESS_ERROR;
		resetSafety();
	}

	else if (!((safety) & INV_ANGLE_ERROR_MASK))
	{
		errorCheck = INVALID_ANGLE_ERROR;
		resetSafety();
	}

	else
	{
		uint16_t lengthOfTemp = length*2 + 2;
		uint8_t temp[lengthOfTemp];

		temp[0] = getFirstByte(command);
		temp[1] = getSecondByte(command);

		for (uint16_t i = 0; i<length; i++)
		{
			temp[2 + 2*i] = getFirstByte(readreg[i]);
			temp[2 + 2*i+1] = getSecondByte(readreg[i]);
		}

		uint8_t crcReceivedFinal = getSecondByte(safety);

		uint8_t crc = crcCalc(temp, lengthOfTemp);

		if (crc == crcReceivedFinal)
		{
			errorCheck = NO_ERROR;
		}
		else
		{
			errorCheck = CRC_ERROR;
			resetSafety();
		}
	}

	return errorCheck;
}

void Tle5012b::resetSafety()
{
	triggerUpdate();

	digitalWrite(_chipselect,LOW);

	delayMicroseconds(DELAYuS);
	_spiConnection->beginTransaction(_spiSetting);
	_spiConnection->transfer16(READ_STA_CMD);
	_spiConnection->transfer16(DUMMY);
	_spiConnection->transfer16(DUMMY);
	_spiConnection->endTransaction();
	delayMicroseconds(DELAYuS);

	digitalWrite(_chipselect,HIGH);
}

errorTypes Tle5012b::readFromSensor(uint16_t command, uint16_t &data)
{
	uint16_t safety = 0;

	if (command & CHECK_CMD_UPDATE)
	{
		triggerUpdate();
	}

	uint16_t readreg;

	digitalWrite(_chipselect,LOW);

	delayMicroseconds(DELAYuS);
	_spiConnection->beginTransaction(_spiSetting);
	_spiConnection->transfer16(command);
	readreg = _spiConnection->transfer16(DUMMY);
	safety = _spiConnection->transfer16(DUMMY);
	_spiConnection->endTransaction();
	delayMicroseconds(DELAYuS);

	digitalWrite(_chipselect,HIGH);

	errorTypes checkError = checkSafety(safety, command, &readreg, 1);

	if (checkError != NO_ERROR)
	{
		data = 0;
		return checkError;
	}
	else
	{
		data = readreg;
		return NO_ERROR;
	}

}

errorTypes Tle5012b::readBlockCRC()
{
	uint16_t safety = 0;

	digitalWrite(_chipselect,LOW);

	delayMicroseconds(DELAYuS);
	_spiConnection->beginTransaction(_spiSetting);
	_spiConnection->transfer16(READ_BLOCK_CRC);

	for (uint8_t i=0; i < CRC_NUM_REGISTERS; i++)
	{
		_registers[i] = _spiConnection->transfer16(DUMMY);
	}

	safety = _spiConnection->transfer16(DUMMY);
	_spiConnection->endTransaction();
	delayMicroseconds(DELAYuS);

	digitalWrite(_chipselect,HIGH);

	errorTypes checkError = checkSafety(safety, READ_BLOCK_CRC, _registers, CRC_NUM_REGISTERS);

	return checkError;

}

errorTypes Tle5012b::getAngleSpeed(double &finalAngleSpeed)
{
	int16_t rawAngleSpeed = 0;
	double angleRange = 0.0;
	uint16_t firMDVal = 0;
	uint16_t intMode2Prediction = 0;

	errorTypes checkError = readAngleSpeed(rawAngleSpeed);

	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = getAngleRange(angleRange);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	//checks the value of fir_MD according to which the value in the calculation of the speed will be determined
	checkError = readIntMode1(firMDVal);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}
	firMDVal >>= 14;

	//according to if prediction is enabled then, the formula for speed changes
	checkError = readIntMode2(intMode2Prediction);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	if(intMode2Prediction & 0x0004)
	{
		intMode2Prediction = 3;
	}

	else
	{
		intMode2Prediction = 2;
	}


	finalAngleSpeed = calculateAngleSpeed(angleRange, rawAngleSpeed, firMDVal, intMode2Prediction);

	return NO_ERROR;

}

errorTypes Tle5012b::getNumRevolutions(int16_t &numRev)
{
	return readAngleRevolution(numRev);
}

errorTypes Tle5012b::getUpdAngleSpeed(double &angleSpeed)
{
	int16_t rawAngleSpeed = 0;
	double angleRange = 0.0;
	uint16_t firMDVal = 0;
	uint16_t intMode2Prediction = 0;

	errorTypes checkError = readUpdAngleSpeed(rawAngleSpeed);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = getAngleRange(angleRange);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readIntMode1(firMDVal);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	checkError = readIntMode2(intMode2Prediction);
	if (checkError != NO_ERROR)
	{
		return checkError;
	}

	if(intMode2Prediction & 0x0004)
	{
		intMode2Prediction = 3;
	}

	else
	{
		intMode2Prediction = 2;
	}

	angleSpeed = calculateAngleSpeed(angleRange, rawAngleSpeed, firMDVal, intMode2Prediction);

	return NO_ERROR;
}
